removed ab tests

--- a/app/views/advertisers/show.html.erb
+++ b/app/views/advertisers/show.html.erb
@@ -4,11 +4,8 @@
 <%#=render 'products/search_form' %>
 <div class="main_content detail-product">
   <h3 class="title">LISTINGS by <%=@advertiser%></h3>
-
-  <% path = ab_test('details_link_to_visit_in_listing', 'yes', 'no')%>
-  
   <% if @products.size > 0 %>
-    <%= render @products, :path => path  %>
+    <%= render @products %>
     <%= paginate @products, :window => 2 %>
   <% else %>
     <%= render 'products/no_products' %>
