--- a/app/views/deals/index.html.erb
+++ b/app/views/deals/index.html.erb
@@ -1,5 +1,5 @@
-<% content_for(:page_title) { "ShopWithMe - Listing all the categories  page #{params[:page]}" } %>
-<% content_for(:page_description) { "ShopWithMe - Listing all the categories page #{params[:page]}" } %>
+<% content_for(:page_title) { "#{DOMAIN_NAME} - Listing all the categories  page #{params[:page]}" } %>
+<% content_for(:page_description) { "#{DOMAIN_NAME} - Listing all the categories page #{params[:page]}" } %>
 
 <div class="main_content detail-product">
   <h3 class="title uppercase">Deals</h3>
