--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -40,7 +40,7 @@
     </div>
     <div class="span3">
       <div class="company_info">
-        <h4>Shop With Me</h4>
+        <h4><%=DOMAIN_NAME_IN_WORDS%></h4>
       </div>
     </div>          
   </div>  
