--- a/app/views/advertisers/index.html.erb
+++ b/app/views/advertisers/index.html.erb
@@ -1,5 +1,5 @@
-<% content_for(:page_title) { "ShopWithMe - Listing all the merchants" } %>
-<% content_for(:page_description) { "ShopWithMe - Listing all the merchants" } %>
+<% content_for(:page_title) { "#{DOMAIN_NAME} - Listing all the merchants" } %>
+<% content_for(:page_description) { "#{DOMAIN_NAME} - Listing all the merchants" } %>
 
 
 <div class="main_content detail-product">
