--- a/app/views/brands/index.html.erb
+++ b/app/views/brands/index.html.erb
@@ -1,5 +1,5 @@
-<% content_for(:page_title) { "ShopWithMe - Listing all the brands" } %>
-<% content_for(:page_description) { "ShopWithMe - Listing all the brands" } %>
+<% content_for(:page_title) { "#{DOMAIN_NAME} - Listing all the brands" } %>
+<% content_for(:page_description) { "#{DOMAIN_NAME} - Listing all the brands" } %>
 
 <div class="main_content detail-product">
   <h3 class="title uppercase">Brands</h3>
