--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
-<% content_for(:page_title) { " Shop inteligent! We have over 6 million products you can choose from." } %>
-<% content_for(:page_description) { "Shop inteligent! We have over 6 million products you can choose from." } %>
+<% content_for(:page_title) { DOMAIN_STRAPLINE + " We have over 6 million products you can choose from." } %>
+<% content_for(:page_description) { DOMAIN_STRAPLINE + " We have over 6 million products you can choose from." } %>
 
 <div class="main_content">
   <% cache('featured_products', :expires_in => 5.hours ) do %>
