--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
   <div class="container-fluid" id="top-bar">
     <div class="row-fluid">
       <div class="span12">
-        <a class="brand pull-left" href="<%=root_url%>" title="ShopWithMe! Shop inteligent!">
-          <%= image_tag("logo.png", :alt => "ShopWithMe! Shop inteligent!", :title => "ShopWithMe! Shop inteligent!")%>
+        <a class="brand pull-left" href="<%=root_url%>" title="<%=[DOMAIN_NAME, DOMAIN_STRAPLINE].join(' ')%>">
+          <%= image_tag("logo.png", :alt => [DOMAIN_NAME, DOMAIN_STRAPLINE].join(' '), :title => [DOMAIN_NAME, DOMAIN_STRAPLINE].join(' '))%>
         </a>
         <!--
         <ul class="nav nav-pills pull-right">
