--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,12 @@
 <html>
 <head>
     <% if Rails.env == 'production' %>
-      <title><%= ('ShopWithMe' + (content_for?(:page_title) ? ' - ' + yield(:page_title) : "Shop inteligent!" )) %></title>
-      <meta name="description" content="<%= ('ShopWithMe' + (content_for?(:page_description) ? ' - ' + yield(:page_description) : "") )%>"/>
+      <title><%= (DOMAIN_NAME +  + (content_for?(:page_title) ? ' - ' + yield(:page_title) : DOMAIN_STRAPLINE )) %></title>
+      <meta name="description" content="<%= (DOMAIN_NAME +  + (content_for?(:page_description) ? ' - ' + yield(:page_description) : "") )%>"/>
       <script type="text/javascript">
 
         var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-41086843-1']);
+        _gaq.push(['_setAccount', <%=ANALITYCS%>]);
         _gaq.push(['_trackPageview']);
 
         (function() {
@@ -20,8 +20,8 @@
       <meta name="msvalidate.01" content="C37E9EC521B9371CC59E45A9438EAACF" />
     <% elsif !devise_controller? %>
 
-      <title><%= ( 'ShopWithMe' + (content_for?(:page_title) ? ' - ' + yield(:page_title) : (raise "no title" )) ) %></title>
-      <meta name="description" content="<%= (content_for?(:page_description) ? 'ShopWithMe - ' + yield(:page_description) : ( raise "no page_description" )) %>"/>
+      <title><%= ( DOMAIN_NAME + (content_for?(:page_title) ? ' - ' + yield(:page_title) : (raise "no title" )) ) %></title>
+      <meta name="description" content="<%= (content_for?(:page_description) ? DOMAIN_NAME + ' - ' + yield(:page_description) : ( raise "no page_description" )) %>"/>
     <% end %>
     
   <%= stylesheet_link_tag    "application", :media => "all" %>
