--- a/app/views/layouts/error.html.erb
+++ b/app/views/layouts/error.html.erb
@@ -7,7 +7,7 @@
       <script type="text/javascript">
 
         var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', <%=ANALITYCS%>]);
+        _gaq.push(['_setAccount', '<%=ANALITYCS%>']);
         _gaq.push(['_trackPageview']);
 
         (function() {
